# coach

./: application.vala  db_tasks.vala  gresource.xml  main.vala  meson.build  root_window.glade  root_window.vala  sqlite_task.vala  sqlite_task_manager.vala  task.vala  task_manager.vala  task_presenter.vala  task_view.vala
sqlite/: database.vala  query.vala  query_result.vala  task.vala  task_manager.vala
